# ORION

./: .env.example  .gitignore  cli.py  main.py  pyproject.toml  requirements.txt  summary.txt  users.json
answer/: answer_pipeline.py  base.py
automation/: __init__.py  rules_engine.py
cognition/: __init__.py  answer.py  executor.py  planner.py  router.py
cognition/reasoning/: __init__.py  prompts.py
core/: audit.py  auth.py  config.py  container.py  contracts.py  interfaces.py  logger.py  runtime.py  ui.py
docs/: AI_BOOTSTRAP.md  ARCHITECTURE.md  CAPABILITIES.md  FLOW.md  LLM_STRATEGY.md  MEMORY.md  MODULES.md  OBSERVABILITY.md  PLUGIN.md  SECURITY.md  system_status_report.md
eventbus/: events.py
execution/: base.py  executor.py
governance/: __init__.py  audit.py  auth.py  policy.py
infra/: config.py  container.py  contracts.py  logger.py
llm/: base.py  base_adapter.py  service.py
llm/adapters/: groq_adapter.py  ollama_adapter.py
memory/: base.py  extractor.py  history.py  profile.py  semantic.py
memory/history/: __init__.py  history.py
memory/profile/: __init__.py  profile.py
pipeline/: answer.py  executor.py  keywords.py  planner.py  policy.py  prompts.py  router.py
planning/: base.py  planner.py
plugins/: base_plugin.py  chat_plugin.py  fs_plugin.py  memory_plugin.py  memory_search_plugin.py  web_plugin.py
plugins/chat/: __init__.py  chat_plugin.py
plugins/memory/: __init__.py  (+1 more)
policies/: base.py  capability_guard.py
routing/: base.py  prompts.py  router.py
runtime/: lifecycle.py
tests/: verify_activation.py  verify_loop.py
(+4 files in other folders)
